--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -90,9 +90,8 @@
   width: 45px;
   height: 35px;
   border-radius: 10px;
-  margin-left: 175px;
+  margin-left: 177px;
   z-index: 999;
-
   margin-top: -35px;
 }
 .arrow {
@@ -117,7 +116,7 @@
 }
 
 .email {
-  margin-left: 3px;
+  margin-left: 2px;
   margin-top: 8px;
   /* border-radius: 10px; */
   border-bottom-left-radius: 10px;
@@ -129,6 +128,7 @@
   height: 30px;
   z-index: -1;
   overflow: hidden;
+  outline: none;
 }
 
 .CompanyName span {
@@ -153,4 +153,37 @@
 ::placeholder {
   color: #104b6f;
   text-align: left;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  .footer-lft {
+    justify-self: self-start;
+    /* margin-top: -180px; */
+    margin-left: 50px;
+  }
+
+  .footer-mdl1 {
+    margin-left: -150px;
+    font-size: 10px;
+  }
+
+  .footer-mdl2 {
+    margin-left: 150px;
+    margin-top: -180px;
+    font-size: 10px;
+  }
+
+  .footer-RGHT {
+    font-size: 10px;
+    margin-top: -40px;
+    margin-left: -20px;
+  }
 }
