--- a/src/Components/StorySection.css
+++ b/src/Components/StorySection.css
@@ -59,3 +59,56 @@
   font-size: 30px;
   font-weight: normal;
 }
+
+@media screen and (max-width: 960px) {
+  .LayoutStory {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .StoryHeader {
+    margin-top: 250px;
+  }
+
+  .StorySectionImage,
+  .StorySectionImage-Img {
+    margin-top: -40px;
+    width: 70vw;
+    height: 20vh;
+    margin-left: 10px;
+  }
+
+  .Heading {
+    /* margin-top: 50px; */
+    /* margin-left: -220px; */
+    width: 350px;
+    font-size: 10px;
+  }
+
+  .rght-image {
+    /* margin-left: -11px; */
+    margin-top: 350px;
+  }
+
+  .rght-Story {
+    margin-left: 40px;
+    margin-top: -300px;
+  }
+
+  .rght-name {
+    font-size: 20px;
+    margin-top: -45px;
+  }
+
+  .rght-name span {
+    font-size: 20px;
+  }
+
+  .rght-image-logo-Story {
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+    /* margin-top: -100px; */
+  }
+}
