--- a/src/Components/teamSection.css
+++ b/src/Components/teamSection.css
@@ -31,3 +31,49 @@
   font-size: 10px;
   font-weight: normal;
 }
+
+@media screen and (max-width: 960px) {
+  .teamSection_headin {
+    white-space: nowrap;
+    font-size: 15px;
+    margin-top: -150px;
+    margin-left: 80px;
+  }
+
+  .teamSectionLayout {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .teamSection-imageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 150px;
+    margin-left: -170px;
+  }
+
+  .member1 {
+    margin-top: 100px;
+    margin-bottom: 20px;
+  }
+
+  .member2,
+  .member3,
+  .member4 {
+    margin-bottom: 20px;
+  }
+
+  .member1,
+  .member1 p,
+  .member2,
+  .member2 p,
+  .member3,
+  .member3 p,
+  .member4,
+  .member4 p {
+    width: 180px;
+    font-size: 10px;
+  }
+}
