MediWheels Web and Mobile Version Updated

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -86,22 +86,6 @@
   white-space: nowrap;
 }
 
-.submit-btn {
-  background-color: #ff0000;
-  width: 45px;
-  height: 35px;
-  border-radius: 10px;
-  margin-left: 177px;
-  z-index: 999;
-  margin-top: -35px;
-}
-.arrow {
-  width: 25px;
-  height: 25px;
-  margin-left: 8px;
-  margin-top: 5px;
-}
-
 .foot-item {
   list-style: none;
   text-decoration: none;
@@ -116,20 +100,43 @@
   line-height: 22px;
 }
 
+.EmailContainer {
+  flex-direction: row;
+  background-color: #d2dde4;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #104b6f;
+  border-radius: 10px;
+  width: 200px;
+  margin-top: 10px;
+}
 .email {
-  margin-left: 2px;
-  margin-top: 8px;
-  /* border-radius: 10px; */
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
-  height: 30px;
-  border: 0.5px solid #19567c;
-  border-right: none;
+  width: 145px;
   background-color: transparent;
+  /* flex: 1; */
+  /* margin-left: 20px; */
+  padding-left: 10px;
   height: 30px;
-  z-index: -1;
-  overflow: hidden;
   outline: none;
+  border: none;
+}
+
+.submit-btn {
+  background-color: #ff0000;
+  width: 45px;
+  height: 30px;
+  border-radius: 8px;
+  /* z-index: 999; */
+  /* margin-top: -15px; */
+  margin-left: 3px;
+}
+.arrow {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 .CompanyName span {
