--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -20,7 +20,7 @@
 
 .textLogo {
   justify-self: start;
-  margin-left: -150px;
+  margin-left: -23px;
   margin-top: 20px;
   cursor: pointer;
   align-items: center;
@@ -59,7 +59,7 @@
   /* align-items: center; */
   text-decoration: none;
   padding: 0.1rem 1rem;
-  height: 100%;
+  height: 20%;
   /* margin-right: -20px; */
   margin-top: 45px;
   /* font-weight: lighter; */
@@ -106,6 +106,13 @@ button {
   color: #ff0000;
 }
 @media screen and (max-width: 960px) {
+  .nav-item {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    /* height: 30px; */
+  }
+
   .nav-Head {
     width: 100%;
   }
@@ -157,12 +164,12 @@ button {
     z-index: 0;
     margin-top: 20px;
     background-color: rgba(255, 255, 255, 0.782);
-    height: 100vh;
+    height: 40vh;
   }
 
   .nav-links {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 10px;
     /* width: 100%;  */
     display: table;
     text-align: center;
@@ -170,7 +177,7 @@ button {
   }
 
   .searchBar {
-    margin-top: 40px;
+    margin-top: 10px;
   }
   .nav-links:hover {
     background-color: #104b6f;
